--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
         <title>Spiro Plotter</title>
     </head>
     <body>
-        <div id ="canvasContainer" style = "float:left">
-            <canvas id ="canvasShape"> </canvas>
-            <canvas id ="canvasMoving"></canvas>
-            <canvas id ="canvasBack"></canvas>
-            <!--<canvas id ="canvasFrame"></canvas> -->
-        </div>
-		<div id = "controls">
+    	<div style = "float: left">
+	        <div id ="canvasContainer" style = "margin: 20px; float:left">
+	            <canvas id ="canvasShape"> </canvas>
+	            <canvas id ="canvasMoving"></canvas>
+	            <canvas id ="canvasBack"></canvas>
+	            <!--<canvas id ="canvasFrame"></canvas> -->
+	        </div>
+	        <div  style = "clear:both width: 100%; text-align: center; margin:auto">
+				<button style = "width: 100px; height: 50px", onclick = Spirograph.start()>Start</button>
+				<button style = "width: 100px; height: 50px", onclick = Spirograph.saveImage()>Save</button>
+			</div>
+		</div>
+		<div id = "controlPanel">
 			<div id = "speedControls" style = "float:left; text-align: center">
 				<div style = "float:left">
 					<div id = "masterSpeed"></div>
@@ -46,30 +52,27 @@
 					<div style = "margin-top: -10px">Arm 3 Length</div>
 				</div>
 			<div>
-			<div id = "options" style = "margin-left: 40px; margin-top: 30px; float:left">
-				Pen Type
-				<select onchange= Spirograph.selectPenType(this)>
-					<option value="pencil">Pencil</option>
-					<option value="round" selected>Brush</option>
-					<option value="angle">Calligraphy</option>
-				</select>
-				Color
-				<select onchange= Spirograph.selectPenColor(this)>
-					<option value="gradient" selected>Rainbow</option>
-					<option value="black">Black</option>
-				</select>
-				Complexity
-				<select onchange= setComplexity(this.value)>
-					<option value=0 selected>Low</option>
-					<option value=1>Medium</option>
-					<option value=2>High</option>
-				</select>
-			<div>
-			<div id = "controlButtons" style = "float:left">
-				<button style = "margin:50px; margin-top:75px;  width: 100px; height: 50px", onclick = Spirograph.start()>Start</button>
-				<button style = "margin:50px; margin-top:75px;  width: 100px; height: 50px", onclick = Spirograph.saveImage()>Save</button>
-			</div>
+
 		</div>
+		<div id = "options" style = "float: left; margin-left: 40px; margin-top: 30px;">
+			Pen Type
+			<select onchange= Spirograph.selectPenType(this)>
+				<option value="pencil">Pencil</option>
+				<option value="round" selected>Brush</option>
+				<option value="angle">Calligraphy</option>
+			</select>
+			Color
+			<select onchange= Spirograph.selectPenColor(this)>
+				<option value="gradient" selected>Rainbow</option>
+				<option value="black">Black</option>
+			</select>
+			Complexity
+			<select onchange= setComplexity(this.value)>
+				<option value=0 selected>Low</option>
+				<option value=1>Medium</option>
+				<option value=2>High</option>
+			</select>
+		<div>
     </body>
     <script>
     	var dialSize = 150;
@@ -78,7 +81,7 @@
 		var arm3Speed = new RotaryDial("Arm 3 Speed", "arm3Speed","arm3SpeedDial", -40, 40, 0, dialSize, Spirograph.dialChanging.bind(Spirograph),null);
 		var arm2Length = new RotaryDial("Arm 2 Length", "arm2Length","arm2LengthDial" ,0, 4, 2,dialSize, Spirograph.dialChanging.bind(Spirograph), null);
 		var arm3Length = new RotaryDial("Arm 3 Length", "arm3Length","arm3LengthDial", 0, 4, 2,dialSize, Spirograph.dialChanging.bind(Spirograph),null);
-		Spirograph.create("canvasContainer", 500, 500);
+		Spirograph.create("canvasContainer", 400, 400);
 
 		var setComplexity = function (complexity) {
 			arm2Speed.setStep(complexity);
